fixtures/error/register_userAlreadyExists.js
module.exports = {
    statusCode: 400,
    detail: 'User already exists'
  };
  